更新编辑器

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+blockquote {
+    border-left: 2px solid #ddd;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 10px;
+    color: #aaa;
+    font-style: italic;
+}
